--- a/polls/templates/polls/survey_list.html
+++ b/polls/templates/polls/survey_list.html
@@ -8,11 +8,46 @@
 
 
 {% block content %}
-<h2>Hola</h2>
+
+
+<div class="inner-wrapper">
+    <button class="btn btn-success" id="js-create" data-url="{% url model_create_url %}"> <span class="glyphicon glyphicon-plus" style="margin-right:5px;"></span>Create Survey</button>
+    <table class='table' id='object-table'>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Date Created</th>
+                <th>Start date</th>
+                <th>End date</th>
+                <th>Number of stocks</th>
+                <th>End date</th>
+                <th>Responses created</th>
+                <th>Responses completed</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% include 'polls/includes/survey/partial_table.html' %}
+        </tbody>
+    </table>
+
+
+    <div class="modal fade" id="modal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+        </div>
+      </div>
+    </div>
+
+</div>
+
 {% endblock content %}
 
 
 {% block javascript %}
-<script src="{% static 'polls/javascript.js' %}"></script>
+<script src="{% static 'polls/polls.js' %}"></script>
+
+
 
 {% endblock javascript %}
