added profile forms and views

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,7 +33,7 @@
 {% endfor %}
 
     <input type="hidden" name="next" value="{{ next }}" />
-    <button class="btn btn-lg bt-success" type="submit">Log in</button>
+    <button class="btn btn-lg bn-success" type="submit">Log in</button>
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
