--- a/users/templates/users/update_profile.html
+++ b/users/templates/users/update_profile.html
@@ -19,7 +19,7 @@
 
 {% endfor %}
 
-    <button class="btn btn-lg bn-success" type="submit">Update Profile</button>
+    <button class="btn btn-lg btn-success" type="submit">Update Profile</button>
 </form>
 
 {% endblock %}
