--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,10 +33,13 @@
 {% endfor %}
 
     <input type="hidden" name="next" value="{{ next }}" />
-    <button class="btn btn-lg bn-success" type="submit">Log in</button>
+    <button class="btn btn-lg btn-success" type="submit">Log in</button>
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="#">Lost password?</a></p>
+
+<a href="{% url 'users:signup' %}">Sign up</a>
+
 
 {% endblock %}
