switched stocks for products

--- a/polls/templates/polls/choose_survey.html
+++ b/polls/templates/polls/choose_survey.html
@@ -17,7 +17,7 @@
                 <th>Date Created</th>
                 <th>Start date</th>
                 <th>End date</th>
-                <th>Number of stocks</th>
+                <th>Number of products</th>
                 <th>Responses created</th>
                 <th>Responses completed</th>
                 <th></th>
@@ -30,7 +30,7 @@
                 <td>{{ object.date_created }}</td>
                 <td>{{ object.start_date }}</td>
                 <td>{{ object.end_date }}</td>
-                <td>{{ object.n_stocks }}</td>
+                <td>{{ object.n_products }}</td>
                 <td>{{ object.n_responses_opened }}</td>
                 <td>{{ object.n_responses_completed }}</td>
                 <td></td>
