--- a/polls/templates/polls/includes/survey/partial_table.html
+++ b/polls/templates/polls/includes/survey/partial_table.html
@@ -4,7 +4,7 @@
     <td>{{ object.date_created }}</td>
     <td>{{ object.start_date }}</td>
     <td>{{ object.end_date }}</td>
-    <td>{{ object.n_stocks }}</td>
+    <td>{{ object.n_products }}</td>
     <td>{{ object.n_responses_opened }}</td>
     <td>{{ object.n_responses_completed }}</td>
     <td></td>
