--- a/polls/templates/polls/survey_list.html
+++ b/polls/templates/polls/survey_list.html
@@ -18,7 +18,7 @@
                 <th>Date Created</th>
                 <th>Start date</th>
                 <th>End date</th>
-                <th>Number of stocks</th>
+                <th>Number of products</th>
                 <th>Responses created</th>
                 <th>Responses completed</th>
                 <th></th>
