made response list views

--- a/polls/templates/polls/includes/survey/partial_table.html
+++ b/polls/templates/polls/includes/survey/partial_table.html
@@ -10,8 +10,8 @@
     <td></td>
     <td>
       <a class="btn btn-success btn-sm"
-         href="{% url 'polls:respond_survey' object.pk %}">
-         Respond
+         href="{% url 'polls:response_list' object.pk %}">
+         Results
       </a>
     </td>
     <td>
