--- a/polls/templates/polls/response_detail.html
+++ b/polls/templates/polls/response_detail.html
@@ -12,8 +12,8 @@
 
 <div class="inner-wrapper">
 
-    <h2>Respondent: {{object.user.username }}</h2>
-    <h2>Company: {{object.user.profile.company}}</h2>
+    <h2>Respondent: {{object.user.email }}</h2>
+    <h2>Company: {{object.user.profile.company|format_none }}</h2>
     <h2>Date responded: {{object.date_responded }}</h2>
     <h2>Completed: {{ object.is_complete|iconbool }}</h2>
 
