--- a/templates/stock_polls/base.html
+++ b/templates/stock_polls/base.html
@@ -55,6 +55,10 @@
                 <div class="sidenav-item">
                     <a href="{% url 'polls:product_list' %}">Add Products</a>
                 </div>
+                
+                <div class="sidenav-item">
+                    <a href="{% url 'logout' %}">Logout</a>
+                </div>
 
             </div>
         {% endif %}
