--- a/templates/stock_polls/base.html
+++ b/templates/stock_polls/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Survey app</title>
-    <meta name="description" content="Piwi se la come">
+    <meta name="description" content="A Survey app">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="{% static 'stock_polls/favicon.ico' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
